[package]
name = "cdda_json_to_ron"
version = "0.1.0"
edition = "2021"
description = "lib skeleton "
license = "MIT OR Apache-2.0"

exclude = [
  "assets/*",
  ".github",
  "Makefile.toml",
  "CONTRIBUTING.md",
  "*.log",
  "tags",
]

[dependencies]

walkdir = "2"
serde_json = { version = "1.0" }
serde = { version = "1", features = ["derive"] }

#bracket-lib = { version = "0.8.7", default-features = false , features=["crossterm"]}  <- do this to run from crossterm

[dev-dependencies]

bincode = "1.3"
ron = "0.8"
serde-transcode = "1.1.1"

varint-rs = "2.2"
ordered-multimap = "0.7"
clap = { version = "4.1", features = ["derive"] }

ordered-float = { version = "4.1.1", features = ["serde"] }
imagesize = "0.12"




[[example]]
name = "hello_cdda"
doc-scrape-examples = true

